tests/compile-fail/dangling_pointers/dangling_pointer_deref.stderr
error: Undefined Behavior: pointer to alloc515 was dereferenced after this allocation got freed
  --> $DIR/dangling_pointer_deref.rs:9:22
   |
LL |     let x = unsafe { *p }; //~ ERROR dereferenced after this allocation got freed
   |                      ^^ pointer to alloc515 was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/dangling_pointer_deref.rs:9:22

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

